sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:21: error: 'while' expected but '}' found.
   } while (term == true)
   ^AlgBubbleSort2:21: error: ';' expected but 'while' found.
   } while (term == true)
     ^AlgBubbleSort2:26: error: Unmatched closing brace '}' ignored here
}
^